[project]
name = "BaeOpt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Abhiram Mullapudi", email = "abhiramm@umich.edu"},
]
dependencies = [
    "gpyopt>=1.2.6",
    "numpy>=1.26.4",
    "scipy>=1.12.0",
    "matplotlib>=3.9.2",
    "pystorms>=1.0.0",
    "xarray>=2024.7.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
